; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_delta/extr_compat.c_copy_cb.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_delta/extr_compat.c_copy_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.editor_baton = type { i32, i32 (i32*, i32, i32, i8*, i32*)*, i32, i32 }
%struct.change_node = type { i8*, i32, i32, i8*, i32 }

@RESTRUCTURE_ADD = common dso_local global i32 0, align 4
@SVN_NO_ERROR = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*, i8*, i8*, i8*, i8*, i32*)* @copy_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @copy_cb(i8* %0, i8* %1, i8* %2, i8* %3, i8* %4, i32* %5) #0 {
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca %struct.editor_baton*, align 8
  %14 = alloca %struct.change_node*, align 8
  store i8* %0, i8** %7, align 8
  store i8* %1, i8** %8, align 8
  store i8* %2, i8** %9, align 8
  store i8* %3, i8** %10, align 8
  store i8* %4, i8** %11, align 8
  store i32* %5, i32** %12, align 8
  %15 = load i8*, i8** %7, align 8
  %16 = bitcast i8* %15 to %struct.editor_baton*
  store %struct.editor_baton* %16, %struct.editor_baton** %13, align 8
  %17 = load i8*, i8** %10, align 8
  %18 = load %struct.editor_baton*, %struct.editor_baton** %13, align 8
  %19 = getelementptr inbounds %struct.editor_baton, %struct.editor_baton* %18, i32 0, i32 3
  %20 = load i32, i32* %19, align 4
  %21 = call %struct.change_node* @insert_change(i8* %17, i32 %20)
  store %struct.change_node* %21, %struct.change_node** %14, align 8
  %22 = load i32, i32* @RESTRUCTURE_ADD, align 4
  %23 = load %struct.change_node*, %struct.change_node** %14, align 8
  %24 = getelementptr inbounds %struct.change_node, %struct.change_node* %23, i32 0, i32 4
  store i32 %22, i32* %24, align 8
  %25 = load i8*, i8** %11, align 8
  %26 = load %struct.change_node*, %struct.change_node** %14, align 8
  %27 = getelementptr inbounds %struct.change_node, %struct.change_node* %26, i32 0, i32 3
  store i8* %25, i8** %27, align 8
  %28 = load %struct.editor_baton*, %struct.editor_baton** %13, align 8
  %29 = getelementptr inbounds %struct.editor_baton, %struct.editor_baton* %28, i32 0, i32 2
  %30 = load i32, i32* %29, align 8
  %31 = load i8*, i8** %8, align 8
  %32 = call i32 @apr_pstrdup(i32 %30, i8* %31)
  %33 = load %struct.change_node*, %struct.change_node** %14, align 8
  %34 = getelementptr inbounds %struct.change_node, %struct.change_node* %33, i32 0, i32 1
  store i32 %32, i32* %34, align 8
  %35 = load i8*, i8** %9, align 8
  %36 = load %struct.change_node*, %struct.change_node** %14, align 8
  %37 = getelementptr inbounds %struct.change_node, %struct.change_node* %36, i32 0, i32 0
  store i8* %35, i8** %37, align 8
  %38 = load %struct.editor_baton*, %struct.editor_baton** %13, align 8
  %39 = getelementptr inbounds %struct.editor_baton, %struct.editor_baton* %38, i32 0, i32 1
  %40 = load i32 (i32*, i32, i32, i8*, i32*)*, i32 (i32*, i32, i32, i8*, i32*)** %39, align 8
  %41 = load %struct.change_node*, %struct.change_node** %14, align 8
  %42 = getelementptr inbounds %struct.change_node, %struct.change_node* %41, i32 0, i32 2
  %43 = load %struct.editor_baton*, %struct.editor_baton** %13, align 8
  %44 = getelementptr inbounds %struct.editor_baton, %struct.editor_baton* %43, i32 0, i32 0
  %45 = load i32, i32* %44, align 8
  %46 = load %struct.change_node*, %struct.change_node** %14, align 8
  %47 = getelementptr inbounds %struct.change_node, %struct.change_node* %46, i32 0, i32 1
  %48 = load i32, i32* %47, align 8
  %49 = load %struct.change_node*, %struct.change_node** %14, align 8
  %50 = getelementptr inbounds %struct.change_node, %struct.change_node* %49, i32 0, i32 0
  %51 = load i8*, i8** %50, align 8
  %52 = load i32*, i32** %12, align 8
  %53 = call i32 %40(i32* %42, i32 %45, i32 %48, i8* %51, i32* %52)
  %54 = call i32 @SVN_ERR(i32 %53)
  %55 = load i32*, i32** @SVN_NO_ERROR, align 8
  ret i32* %55
}

declare dso_local %struct.change_node* @insert_change(i8*, i32) #1

declare dso_local i32 @apr_pstrdup(i32, i8*) #1

declare dso_local i32 @SVN_ERR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
